--- a/AI_Project_Manager/README.me
+++ b/AI_Project_Manager/README.me
@@ -1,1 +1,28 @@
 
+# Chef de Projet IA - Instructions
+
+Instructions 1 : 30/09/2024
+
+Date Limite : 4 octobre 2024
+
+Vous devez doit soumettre un Premier Livrable de 2 à 3 pages fesant office d'un premier draft POUR  l'ANALYSE DU BESOIN du projet contenant les éléments suivants :
+
+1.Contexte : 
+   - Fournir des informations de base sur le problème.
+
+2.  Problématique : 
+   - Décrire le problème traité.
+   - Expliquer son importance et qui en bénéficie.
+   - En quoi l'IA peut-elle aider ?
+
+3. Présentation de l'Équipe : 
+   - Indiquer les membres et leurs rôles.
+
+4. Phases du Projet : 
+   - Décrire les deux étapes clés (phase 1 : Plan d'occupation du sol / Phase 2 : Prediction spatiaux-temporels)
+
+5. Analyse Globale : 
+   - Discuter des avantages et des limitations de l'approche utilisée.
+
+Date Limite : 4 octobre 2024
+
